--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -38,13 +38,13 @@
   <%= render "#{device_type}_lookup" %>
 </div>
 
-<p> If you have registered already, go ahead and make your telephone appointment. Just click the button below and describe your symptoms.  </p>
+<p> If you have registered already, go ahead and make your telephone appointment. Just click the button below and describe your symptoms. Doctor on duty (see the schedule) will call you back.  </p>
 
 <div align="center" class="pt-4"><%= link_to 'Book An Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class="pt-4">
   <i>
-    Patients who booked their appointments online for visits at the clinic will be seen by doctor <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients who booked their appointments online for visits at the clinic <u>will not have to wait</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
