--- a/app/views/static_pages/_desktop_rmm_home.html.erb
+++ b/app/views/static_pages/_desktop_rmm_home.html.erb
@@ -3,7 +3,7 @@
 <div class="col-md-4">
 <div id='homepic' style="padding:50px">
   <img src='/images/pharm.jpg'></img> 
-<h1> (289) 204-0561 </h1>
+<h1> (905) 561-9255 </h1>
 </div>
 </div>
 
@@ -13,22 +13,34 @@
   Medication Renewals Over The Phone
 </div> 
 
-<div class="pt-4">
+<div class="pt-5">
 <font size=3>
   <p><font size=6>D</font>id you know? You can now renew your medications over the phone - free of charge. </p>
   <p>Simply register with your OHIP card, and log in to request callback from doctor. Discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
 
-<div align="center" class="pt-4"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-5"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<p class="pt-4"><i>We never send surprise bills for insured services! Free is free. </i></b> 
-<p class="pt-2">Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
+<p class="pt-5"><i>We never send surprise bills for insured services! Free is free. </i></b> 
+<p class="pt-2">Don’t have a health card? We still can help. Please call 905-561-9255.  </p>
+
+<div class="pt-5">
+Covid-19 is here and it’s not a regular flu. This virus is much more contagious and much more deadly, especially for older people with health conditions.  There’s no cure and no vaccine at this point. So please treat the situation seriously and take all measures to keep yourself safe.
+If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the button above.
+</div>
+
+<div class="pt-3"
+<b>Mask or no mask?</b> Surgical masks in general, but especially N95 (US) or FFP3 (Europe) help to prevent the spread of the disease. If you have Covid-19 symptoms, it’s recommended to wear a mask in public.
+</div>
+
+<div class="pt-3"
+<b>Think you might have it?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
+</div>
 
 </font>
 
-<div class="pt-5">
-<%= render "footer_icons" %>
+</div>
 </div>
 
-</div>
-</div>
+<%= render "footer_icons" %>
+
 
