--- a/app/views/static_pages/_footer_icons.html.erb
+++ b/app/views/static_pages/_footer_icons.html.erb
@@ -1,25 +1,17 @@
-<div class="row" style="bottom: -5px; position: relative; clear: both;">
-<div class="col-md-2 col-xs-3 col-md-offset-4 col-xs-offset-0">
-<div style="width: 100px">
+<div class="row" style="bottom: -10px; position: relative; clear: both; width: 100%;">
+<div class="col-md-1 col-xs-3 col-md-offset-5 col-xs-offset-0" style="vertical-align: bottom;">
   <a href="https://doctors.cpso.on.ca/DoctorDetails/E-Ostapenko/0169356-74913" target="_new">
-  <img src="/images/lena.png" width=65><br> My CPSO record</a>
-</div>
+    <img src="/images/lena.png" width=65><br><small> My CPSO record</small></a>
 </div>
 
 <div class="col-md-1 col-xs-3">
-<div style="width: 45px">
-  <i class="glyphicon glyphicon-time" style="font-size:30px;"></i><small>Fast Callbacks</small>
-</div>
+  <i class="glyphicon glyphicon-time" style="font-size:30px;"></i><br><small>Fast Callbacks</small>
 </div>
 <div class="col-md-1 col-xs-3">
-<div style="width: 45px">
-  <i class="glyphicon glyphicon-lock" style="font-size:30px;"></i><small>Secure OTN Platform</small>
-</div>
+  <i class="glyphicon glyphicon-lock" style="font-size:30px;"></i><br><small>Secure OTN Platform</small>
 </div>
 <div class="col-md-1 col-xs-3">
-<div style="width: 45px">
-  <i class="glyphicon glyphicon-ok" style="font-size:30px;"></i><small>OHIP covered</small>
-</div>
+  <i class="glyphicon glyphicon-ok" style="font-size:30px;"></i><br><small>OHIP covered</small>
 </div>
 </div>
 
