--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -9,7 +9,7 @@
 
   <%= render "#{device_type}_lookup" %>
 
-<p> Already registered? Just click the button below to book an appointment.  </p>
+<p> Already registered? Just click the button below to book an appointment. Doctor on duty will call you back. </p>
 
 <div align="center" class="pt-4">
 <%= link_to 'Book An Appoinment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
