--- a/app/views/static_pages/_mobile_rmm_home.html.erb
+++ b/app/views/static_pages/_mobile_rmm_home.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, 'Welcome') %>
 
-<div id="logo">Stoney Creek Medical Walk-In Clinic</div>
-
-<div class="row pt-4">
+<div class="row pt-2">
  <div class="col-xs-12">
   <div class="hdr-text"> 
     Prescription Renewals Over The Phone
@@ -22,16 +20,15 @@
     <p><font size=6>D</font>id you know? You can now renew your medications over the phone - free of charge. </p>
     <p>Simply register with your OHIP card, log in and request callback from doctor. Discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
 
-<div align="center" class="p-3"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-3"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
+<div class="pt-4">
 <p>Don’t have a health card? We still can help. Please call the number below to talk to a doctor. 
 <i><b>Sorry, no renewals of opioid medications! </b></i></p>
+</div>
 
-<h1> (289) 204-0561 </h1>
+<h1> (905) 561-9255 </h1>
 
-<div class='pt-4 ml-2'>
+</div>
 <%= render "footer_icons" %>
-</div>
-
-</div>
 
