--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -57,11 +57,22 @@ Medications:
 </div>
 
   <div class="pt-3" style="float:right" ><small>* Only one appointment per patient per day is allowed by OHIP </small></div>
+
+ <div class="ml-3 pt-5" style="clear: both">
+    <div class="panel panel-info news-panel-body">
+      <div class="panel-body "><p align="justify">
+       This is current schedule updated daily. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
+       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm.
+  <%= render "schedules/full_schedule" %>
+        </p>
+    </div>
+  </div>
+  </div>
+
   <% end %>
 </aside>
 
 <div class="spacer-20"></div>
-
 <%= render "patient_#{device_type}_visits" %>
 
 </div>
