--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,13 @@
 <h3>Stoney Creek Medical Walk-In Clinic patient registration</h3>
-<p>Welcome <%= @email %>!</p>
+<p></p>
+<h4>Welcome, <%= @email %>!</h4>
 
-<p>You can confirm your account email through the link below. After this you can log in and book your first telemedicine visit</p>
+<p>You can confirm your account email using the link below. After this you can log in to your profile and book your first visit</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+
+<p>
+Site admin
+</p>
 
