--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -8,9 +8,11 @@
   <%= f.hidden_field :mname %>
   <%= f.hidden_field :maid_name %>
   <%= f.hidden_field :notes %>
+  <%= f.hidden_field :hin_expiry %>
+  <%= f.hidden_field :mobile %>
+  <%= f.hidden_field :pharm_fax %>
 
-  <!-- Row 1 -->
-  
+<!-- Row 1 -->
 <div class="row">
   <div class="col-md-3 col-xs-12">
      <%= f.input :lname, hint: 'Required'%>
@@ -20,103 +22,59 @@
   <%= f.input :fname %>
   </div>
 
-  <div class="col-md-3 col-xs-12">
+  <div class="col-md-3 col-xs-6">
   <%= f.input :sex, collection: SEXES, hint: 'Required', label: 'Gender', include_blank: false %>
   </div>
   
-  <div class="col-md-3 col-xs-4">
-  <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
+  <div class="col-md-3 col-xs-6">
+    <%= f.input :dob, as: :date, label: 'Born', start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
   </div>
 </div>  
   
+<!-- Row 2 -->
 <div class="row">
-  <div class="col-md-2" id="ifh_number", style="display:none;">
-  <%= f.input :ifh_number, label:'IFH Number', hint: 'Required *' %>
+  <div class="col-md-2">
+  <%= f.input :phone, as: :tel, label: 'Phone', value: num_to_phone(@patient.phone), hint: 'Required' %>
   </div>
 
   <div class="col-md-3" id="ohip_number">
-  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ', disabled: true %>
+  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ' %>
   </div>
 
   <div class="col-md-2" id="ohip_ver">
-     <%= f.input :ohip_ver, label: 'Version', hint: "2 letr" %>
+     <%= f.input :ohip_ver, label: 'Version Code', hint: "2 letters" %>
   </div>
 
   <div class="col-md-2" id="hin_prov" >
-  <%= f.input :hin_prov, collection: PROVINCES, label: 'Prov', include_blank: false %>
-  </div>
-  
-  <div class="col-md-3" id="hin_expiry">
-     <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required' %>
-  </div>
-  
-  <div class="col-md-2">
-  <%= f.input :family_dr, label: 'Family Doctor', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
-  </div>
-</div>
-  
-<%
-=begin %>
-
-<!-- Row 3 -->
-<div class="row">
-
-  <div class="col-md-6">
-  <%= f.input :addr, label: 'Street Address' %>
+  <%= f.input :hin_prov, collection: PROVINCES, label: 'Card Province', include_blank: false %>
   </div>
   
   <div class="col-md-3">
-  <%= f.input :city %>
-  </div>
-  
-  <div class="col-md-1 col-sm-1">
-  <%= f.input :prov, collection: PROVINCES, include_blank: true %>
-  </div>
-  
-  <div class="col-md-2">
-  <%= f.input :postal, label: 'Postal/ZIP' %>
-  </div>
-</div>
-
-<%
-=end %>
-
-<!-- Row 4 -->
-
-<div class="row">
-  <div class="col-md-2">
-  <%= f.input :phone, as: :tel, label: 'Home Phone', value: num_to_phone(@patient.phone) %>
-  </div>
-  
-  <div class="col-md-2">
-  <%= f.input :mobile, as: :tel, value: num_to_phone(@patient.mobile), hint: "Optional" %>
-  </div>
-  
-  <div class="col-md-4">
-  <%= f.input :pharmacy, label:'Pharmacy name', hint: 'Optional' %>
-  </div>
-  
-  <div class="col-md-2">
-  <%= f.input :pharm_phone, as: :tel, label: 'Pharm. Phone', value: num_to_phone(@patient.pharm_phone), hint: 'Optional' %>
-  </div>
-  
-  <div class="col-md-2">
-  <%= f.input :pharm_fax, as: :tel, label: 'Pharm. Fax', value: num_to_phone(@patient.pharm_fax), hint: 'Optional' %>
+  <%= f.input :family_dr, label: 'Family Doctor', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
   </div>
   
 </div>
   
-<!-- Row 6 -->  
+<!-- Row 3 -->
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-3">
+  <%= f.input :pharmacy, label:'Preferred Pharmacy', hint: 'Optional' %>
+  </div>
+  
+  <div class="col-md-3">
+  <%= f.input :pharm_phone, as: :tel, label: 'Pharmacy Phone', value: num_to_phone(@patient.pharm_phone), hint: 'Optional' %>
+  </div>
+  
+  <div class="col-md-6">
   <%= f.input :allergies, label: 'Allergies, if any', hint: 'Optional'  %>
   </div>
 </div>
+  
 
-<!-- Row 7 -->
+<!-- Row 4 -->
 <div class="row" >
   <div class="col-md-12">
-  <%= f.input :meds, label: 'List of current medications', hint: 'Optional'  %>
+  <%= f.input :meds, label: 'Current medications, if any', hint: 'Optional'  %>
   </div>
 </div>
 
@@ -127,18 +85,4 @@
 </div>
 
 <% end %>
-
-<script defer>
-//$('body').tooltip({ selector: "[data-toggle~='tooltip']"});
-//$(document).ready(function () {
-// Show maiden name text field for female patients 
-//   var sex = $('select[name="patient[sex]"]');
-	
-//   (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
-//   sex.change(function () {
-//     (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
-//   });
-
-//});
-</script>
 
