--- a/app/views/visits/_patient_show.html.erb
+++ b/app/views/visits/_patient_show.html.erb
@@ -23,9 +23,10 @@
 </pre>
 
 <% if @visit.reason.present? %>
+<b>Reason for Visit </b>:  
 <div class="panel panel-info">
    <div class="visit-notes-panel-body">
-<b>Reason for Visit </b>: <%= @visit.reason %>
+      <%= @visit.reason %>
    </div>
 </div>
 <% end %>
