consent checkbox bug

--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -57,10 +57,10 @@
   </div>
 </div>
 
-<% if action_name == 'new' %>
+<%# if action_name == 'new' %>
 <p>
 <%= render "consent_form", f: f %>
-<% end %>
+<%# end %>
 
 <div class="pt-3">
 <% unless action_name == 'show' %>
