--- a/app/views/visits/_doctor_buttons.html.erb
+++ b/app/views/visits/_doctor_buttons.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
  <div class="col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1">
- <% if [ARRIVED,READY,ERROR].include?(@visit.status) || current_user.admin? %>
+ <% if [ARRIVED,READY,ERROR].include?(@visit.status) && current_doctor.id == @visit.doctor.id %>
  <div class="col-sm-3 col-md-2">
   <%= button_to "Edit Visit", edit_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-primary", method: "get" %>
  </div>
