--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -89,8 +89,10 @@ $(ohip_num).change(function () {
       if (data.lname !== undefined) {
 //        console.log(data);
         result = `Clinic patient found:<br> ${data.lname}, ${data.fname} born ${data.dob}<br> Last visit: ${data.last_visit_date}`;
-        $("#results").append(result);
+        $("#results").html(result);
         $('#note').hide()
+        var em = document.getElementById('user_email');
+        $(em).val(data.email);
       }
     }).fail(function (data) {
         console.log('AJAX request has FAILED');
