--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,9 +1,8 @@
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-  <h3>Cange your password</h3>
+  <h3>Change your password</h3>
   <div class="well">
 
-f.error   <%= f.object.errors[:base].to_sentence  %>
   <%= f.input :reset_password_token, as: :hidden %>
   <%= f.full_error :reset_password_token %>
 
