home pages updated

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -25,14 +25,12 @@
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div> 
   <div class='pt-5'></div>
 <font size=3>
-  <p><font size=6>A</font>fter long disruption to regular services at our Stoney Creek location, we are now happy to announce resumption of full 7 day schedule. Patients who need to see a doctor now can come to the clinic. Please check current schedule below. Patients who registered online are always given the priority</p>
+  <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are served first. During callback to discuss your medical issue, the doctor will decide if you need to come to the clinic. </p> 
+  <div class="pt-3"></div>
+  <p> <font size=6>P</font>rescriptions can be reniewed over the phone. You can pick them up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
 
   <div class="pt-3"></div>
-
-  <p><font size=6>I</font>f there's no need for physical visit, you can discuss your medical issue with one of our doctors over the phone. You can also renew your prescription over the phone and pick it up at the pharmacy of your choice. Please register below and request callback from doctor.  </p>
-
-  <div class="pt-3"></div>
-  <p> <font size=6>N</font>ot registered yet? Registration is easy and secure, we just need last 4 digits of you health card number. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
+  <p> <font size=6>N</font>ot registered yet? Registration is easy and secure, we just need your date of birth and last 4 digits of you health card number. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
 
 <div class="pt-3">
   <%= render "#{device_type}_lookup" %>
