typo, email link change

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -4,8 +4,8 @@
   <div class="col-md-5">
     <img src='/images/clinic.jpg' width="480"></img>
     <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 
-      <br>During off hours please <%= link_to "register online", new_user_session_path %>. In case of any registration problems, you can
-      <a href="mailto:drlena@me.com?subject=Patient Inquiry">send me an email</a>
+      <br>During off hours please <%= link_to "request callback", new_user_session_path %>. In case of any registration problems, please
+      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send me an email</a>
     </div>
 
     <p>
@@ -27,7 +27,7 @@
 <font size=3>
   <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are served first. During callback to discuss your medical issue, the doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can be reniewed over the phone. You can pick them up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
+  <p> <font size=6>P</font>rescriptions can be renewed over the phone. You can pick them up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
 
   <div class="pt-3"></div>
   <p> <font size=6>N</font>ot registered yet? Registration is easy and secure, we just need your date of birth and last 4 digits of you health card number. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
