--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -3,24 +3,21 @@
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div>
   <div class='pt-4'></div>
 <font size=3>
-  <p><font size=6>W</font>e are happy to announce resumption of full 7 day schedule. Please register below to save time. During callback, doctor will decide if you need to come to the clinic.</p>
+  <p><font size=6>C</font>linic is now open 7 days a week. Schedule is shown below.  Please register for callback to save time. During callback, doctor will decide if you need to come to the clinic. Registered patients are given priority.</p>
 
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can be renewed over the phone. You can pick them up at the pharmacy of your choice. Please register below and request callback from doctor.</p>
-
-  <div class="pt-3"></div>
-  <p> <font size=6>N</font>ot registered yet? Registration is easy and secure, just use the form below. More than 65000 patients visited our clinic over the last 15 years, so chances are you are in our database.</p>
+  <p> <font size=6>P</font>rescriptions can be renewed over the phone. You can pick them up at the pharmacy of your choice. Just register below and request callback from doctor.</p>
 
   <%= render "#{device_type}_lookup" %>
 
 <p> Already registered? Just click the button below to book an appointment. Doctor on duty will call you back. </p>
 
 <div align="center" class="pt-4">
-<%= link_to 'Book An Appoinment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class="pt-4">
   <i>
-    Patients with online appointments for visits at the clinic will be seen by doctor <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients with online appointments for visits at the clinic will be seen <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
