--- a/app/views/daysheet/_doctor_desktop_index.html.erb
+++ b/app/views/daysheet/_doctor_desktop_index.html.erb
@@ -15,7 +15,9 @@
       <tr>
 	  <th class="tbl_xs"></th>
 	  <th class="tbl_lsm"><%= sortable 'entry_ts', ts.html_safe %></th>
-          <th class="tbl_lsm">Room</th>
+          <% if @date.today? %>
+          <th class="tbl_lsm text-center">Room </th>
+          <% end %>
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_sm">Type</th>
           <th class="tbl_md text-center">HC/IFH #</th>
