patient list removed for doctors; no phone/email shown for doctors

--- a/app/views/layouts/_desktop_doctor_navigation.html.erb
+++ b/app/views/layouts/_desktop_doctor_navigation.html.erb
@@ -11,7 +11,7 @@
   <% elsif !%w(visits users static_pages password_resets).include?(controller_name) %>
     <%= render 'layouts/find' %>
   <% end %>
-  <li class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
+  <!--  <li class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li> -->
   <li class="nav-item <%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
   <%= render 'layouts/doctor_billing' %>
   <%= render 'layouts/doctor_docs' %>
