Total of billed visits for corrent cycle added to admin

--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -7,5 +7,6 @@
  <li><%= link_to "Export Files", export_files_path %> </li>
  <li><%= link_to "EDT Files", edt_files_path  %> </li> 
  <li><%= link_to "Budget", budget_path  %> </li> 
+ <li><%= link_to "Total billed", total_unpaid_visits_path  %> </li> 
 </ul>
 </li>
