wording on front page

--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -17,7 +17,7 @@
 
 <div class="pt-4">
   <i>
-    Patients with online appointments for visits at the clinic will be seen <u>right away</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients with online appointments for visits at the clinic  <u>will be given priority</u>. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
