--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -25,7 +25,7 @@
   <div class="hdr-text">We are now open every Day!  <img src="/images/leaf.png" width=45 valign=top> </div> 
   <div class='pt-5'></div>
 <font size=3>
-  <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are served first. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
+  <p><font size=6>C</font>linic is now open 7 days a week. Please check current schedule below. Patients who registered online for virtual appointment are given priority. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
   <div class="pt-3"></div>
   <p> <font size=6>P</font>rescriptions can now be renewed over the phone. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor.</p>
 
@@ -39,7 +39,7 @@
 
 <div class="pt-4">
   <i>
-    Patients who booked their appointments online for visits at the clinic <u>will not have to wait</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients who booked their appointments online for visits at the clinic as well as patients with small children  <u>will be given priority</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
