Patient search by email is now supported

--- a/app/views/layouts/_find.html.erb
+++ b/app/views/layouts/_find.html.erb
@@ -1,5 +1,5 @@
 <% if controller_name == 'patients' %> 
-   <% tool_tip_title = "Full/Partial Last Name, First Name, Health Number or Date Of Birth: [dd-mm-yyyy]" %>
+   <% tool_tip_title = "Full/Partial Last Name, First Name, Health Number, Date Of Birth: [dd-mm-yyyy] or full email" %>
 <% end %>
 
 <li style="width: 30px;">&nbsp;</li>
